src/modules/ngx-select/component/ngx-select.component.scss
.ngx-select-trigger {
    display: inline-table;
    cursor: pointer;
    position: relative;
    box-sizing: border-box;
    width: 250px;
    height: 35px;
    line-height: 1.5;
    font-size: 15px;
    color: #434246;
    border: 1px solid #c1c1c2;
    border-radius: 4px;
    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
    background-color: transparent;
    outline: none;
    box-shadow: none;

    .ngx-select-value {
        display: table-cell;
        max-width: 0;
        width: 100%;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        padding: 0 0 0 15px;
        vertical-align: middle;

        .ngx-select-placeholder {
            opacity: 0.7;
        }

        .ngx-select-value-text {
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
        }
    }

    .ngx-select-arrow-wrapper {
        display: table-cell;
        vertical-align: middle;
        width: 35px;
        padding: 13px;
        z-index: 1;
        border-left: 1px solid #d8d8d8;
        border-radius: 0 4px 4px 0;

        .ngx-select-arrow {
            width: 0;
            height: 0;
            border-left: 5px solid transparent;
            border-right: 5px solid transparent;
            border-top: 5px solid;
            margin: 0 4px;
            font-size: 8px;
            vertical-align: text-top;
            color: #8b8995;

            &.arrow-up {
                transform: rotate(180deg);
            }

            &.arrow-down {
                transform: rotate(0deg);
            }
        }
    }
}

.ngx-uppercase {
    text-transform: uppercase;
}

.ngx-lowercase {
    text-transform: lowercase;
}

.ngx-capitalize {
    text-transform: capitalize;
}

/*=================================================================*/
.ngx-select-panel {
    padding: 5px 0;
    margin: 5px 0 0 0;
    overflow: auto;
    -webkit-overflow-scrolling: touch;
    height: 100%;
    min-width: 100%;

    &:not([class*=mat-elevation-z]) {
        box-shadow: 0 5px 5px -3px rgba(0, 0, 0, .2), 0 8px 10px 1px rgba(0, 0, 0, .14), 0 3px 14px 2px rgba(0, 0, 0, .12);
    }

    .ngx-select-content {
        background: #fff;
    }
}

ngx-select-option.ngx-active .ngx-option-text {
    background-color: lightgray;
}

/*===================================
    Styles for Angular CDK overlay
====================================*/
.cdk-overlay-container {
    position: fixed;
    z-index: 1000;
    pointer-events: none;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;

    .cdk-overlay-backdrop {
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        z-index: 1000;
        pointer-events: auto;
        transition: opacity .4s cubic-bezier(.25, .8, .25, 1);
        opacity: 0;

        &.cdk-overlay-backdrop-showing {
            opacity: .48
        }

        &.cdk-overlay-transparent-backdrop {
            background: 0 0;
        }
    }

    .cdk-overlay-pane {
        position: absolute;
        pointer-events: auto;
        box-sizing: border-box;
        z-index: 1000;
        height: 256px;
    }
}

